Add advanced search and image search

--- a/advancedsearch.html
+++ b/advancedsearch.html
@@ -1,9 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Search</title>
+        <title>Advanced Search</title>
+        <link rel="stylesheet" href="style.css">  
     </head>
     <body>
-        <h1>Advanced Search<h1>
+        <div>
+            <Table style="width: 100%">
+                <tr>
+                    <td>
+                        <img class="logo-small" src="GoogleLogo.png" alt="Google Image logo">
+                    </td>
+                    <td style="text-align: right;">
+                        <a href="index.html" class="button">Back to Google Search</a>
+                    </td>
+                </tr>
+            </Table>
+        <h2>Advanced Search</h2>
+            <hr class="divider">
+        </div>
+        <Table class="table">
+            <tr>
+                <th>Find pages with…</th>
+            </tr>
+            <tr class="table-row">
+                <td class="container-left">all these words:</td>
+                <td class="container-right">
+                    <input class="input-small"; action="https://www.google.com/search" method="GET">
+                </td>
+            </tr>
+            <tr class="table-row">
+                <td class="container-left">this exact word or phrase:</td>
+                <td class="container-right">
+                    <input class="input-small"; action="https://www.google.com/search" method="GET">
+                </td>
+            </tr>
+            <tr class="table-row">
+                <td class="container-left">any of these words:</td>
+                <td class="container-right">
+                    <input class="input-small"; action="https://www.google.com/search" method="GET">
+                </td>
+            </tr>
+            <tr class="table-row">
+                <td class="container-left">none of these words:</td>
+                <td class="container-right">
+                    <input class="input-small"; action="https://www.google.com/search" method="GET">
+                </td>
+            </tr>
+        </Table>
     </body>
 </html>
