--- a/imagesearch.html
+++ b/imagesearch.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Search</title>
+        <title>Image Search</title>
+        <link rel="stylesheet" href="style.css">  
     </head>
     <body>
-        <h1>Hello World!<h1>
+        <div class="container-right">
+            <form action="index.html">
+                <input class="button" type="submit" value="Back to Google Search">
+            </form>
+        </div>
+        <div class="container">
+             <img class="logo" src="GoogleImageLogo.png" alt="Google Image logo">
+                <form action="http://images.google.com/images" method="GET">
+                    <input class="input" type="text" name="q">
+                    <div style="margin-top: 10px">
+                        <input class="button" type="submit" name="btnK" value="Google Search">
+                    </div>
+                </form>
+         </div>
+
     </body>
 </html>
