--- a/imagesearch.html
+++ b/imagesearch.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">  
     </head>
     <body>
-        <div class="container-right">
+        <div class="container-top">
             <form action="index.html">
                 <input class="button" type="submit" value="Back to Google Search">
             </form>
@@ -14,7 +14,7 @@
              <img class="logo" src="GoogleImageLogo.png" alt="Google Image logo">
                 <form action="http://images.google.com/images" method="GET">
                     <input class="input" type="text" name="q">
-                    <div style="margin-top: 10px">
+                    <div class="container-button">
                         <input class="button" type="submit" name="btnK" value="Google Search">
                     </div>
                 </form>
