--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Proto</title>
+    <title>Unity WebGL Player | BuildTest</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Proto</div>
+        <div id="unity-build-title">BuildTest</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/NaviDemo.loader.js";
+      var loaderUrl = buildUrl + "/BuildTest.loader.js";
       var config = {
-        dataUrl: buildUrl + "/NaviDemo.data.unityweb",
-        frameworkUrl: buildUrl + "/NaviDemo.framework.js.unityweb",
-        codeUrl: buildUrl + "/NaviDemo.wasm.unityweb",
+        dataUrl: buildUrl + "/BuildTest.data.br",
+        frameworkUrl: buildUrl + "/BuildTest.framework.js.br",
+        codeUrl: buildUrl + "/BuildTest.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Proto",
+        productName: "BuildTest",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
