Add test build14

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BuildTest.loader.js";
+      var loaderUrl = buildUrl + "/BuildLoad.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildTest.data",
-        frameworkUrl: buildUrl + "/BuildTest.framework.js",
-        codeUrl: buildUrl + "/BuildTest.wasm",
+        dataUrl: buildUrl + "/BuildLoad.data.br",
+        frameworkUrl: buildUrl + "/BuildLoad.framework.js.br",
+        codeUrl: buildUrl + "/BuildLoad.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BuildTest",
